<resources>
    <string name="app_name">AcadGildSessions</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_assignment">Assignment</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="text_color">TEXT COLOR</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="Blue">Blue</string>
    <string name="title_activity_assignment4">Assignment4</string>
    <string name="action_title">Select Action</string>
</resources>
