<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.acadgild.niranjan.com.acadgildsessions.Session6.Assignment2">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="always"
        android:icon="@mipmap/ic_info_black_24dp"/>
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="always"
        android:icon="@mipmap/ic_help_black_24dp"/>

    <item android:id="@+id/text_color"
        android:title="@string/text_color"
        app:showAsAction="always">

        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:HTMLCode="http://schemas.android.com/apk/res-auto" >
            <item android:id="@+id/red"
                android:title="@string/red"
                HTMLCode:showAsAction="ifRoom|withText" />

            <item android:id="@+id/green"
                android:title="@string/green"
                HTMLCode:showAsAction="ifRoom|withText" />

            <item android:id="@+id/blue"
                android:title="@string/Blue"
                HTMLCode:showAsAction="ifRoom|withText" />
        </menu>
    </item>

</menu>
